0107 学年選択とテキスト選択と問題一覧まで 一覧, 論点の選択画面は実装忘れ

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,14 @@
         android:layout_height="wrap_content"
         app:tabBackground="@color/colorPrimary"
         app:tabIndicatorColor="@android:color/holo_orange_dark"
-        app:tabTextColor="@android:color/background_light">
+        app:tabTextColor="@android:color/background_light"
+        app:tabGravity = "fill"
+        app:tabMaxWidth = "0dp">
 
         <android.support.design.widget.TabItem
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="4年生" />
+            android:text="6年生" />
 
         <android.support.design.widget.TabItem
             android:layout_width="match_parent"
@@ -28,10 +30,11 @@
         <android.support.design.widget.TabItem
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="6年生" />
+            android:text="4年生" />
+
     </android.support.design.widget.TabLayout>
 
-    <android.support.v4.view.ViewPager
+    <com.example.nec_pcuser.listbranch.CustomViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
